# code-agent-lab

./: README.md  pyproject.toml
docs/presentation/: 01-intro.html  02-agent-loop.html  03-tool-use.html  04-streaming.html  05-context.html  06-skills.html  07-subagents.html  08-llm-abstraction.html  09-takeaways.html  index.html
docs/presentation/assets/: script.js  styles.css
docs/presentation/slides/: 01-hero.js  01-introduction.js  02-what-is-agent.js  03-motivation.js  04-five-components.js  04-react-pattern.js  05-four-layers.js  05-loop-code.js  06-four-layers.js  06-react-pattern.js  07-loop-code.js  07-tool-mental-model.js  (+36 more)
src/code_agent/: __main__.py  app.py  config.py
styles/: app.tcss
tests/: conftest.py  test_app.py
tests/agents/: test_subagent_manager.py  test_subagent_runner.py
tests/core/: test_agent_client.py  test_chat_session.py  test_events.py  test_turn.py
tests/llm/: test_client.py  test_gemini_client.py  test_types.py
tests/prompts/: test_init.py  test_memory_discovery.py  test_prompt_provider.py  test_system_prompt.py
tests/services/: test_agent_service.py
tests/skills/: test_skill_loader.py  test_skill_manager.py
tests/tools/: test_activate_skill.py  test_base.py  test_default_registry.py  test_glob.py  test_grep_search.py  test_list_directory.py  test_read_file.py  test_registry.py  test_replace.py  test_shell.py  test_task.py  test_web_fetch.py  test_write_file.py
tests/widgets/: test_chat_view.py  test_message.py  test_message_input.py  test_status_bar.py  test_thinking_indicator.py  test_tool_call.py
(+39 files in other folders)
